done amazon and todo

--- a/whatfire/package.json
+++ b/whatfire/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp",
+  "name": "clone2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,12 +8,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^8.0.0",
+    "pusher-js": "^7.0.0",
     "react": "^16.13.1",
-    "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-firebase-hooks": "^2.2.0",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
