--- a/Amazon Full Stack/package.json
+++ b/Amazon Full Stack/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.11.12",
+    "nodemon": "^2.0.7",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
