--- a/Amazon Full Stack/frontend/package.json
+++ b/Amazon Full Stack/frontend/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux-thunk": "^2.3.0",
